--- a/lang/es_MX.yml
+++ b/lang/es_MX.yml
@@ -120,7 +120,7 @@ es_MX:
     Find: Buscar
     LEVELUP: 'Subir de nivel'
     LinkExisting: 'Enlazar existente'
-    NewRecord: 'Nuevo %s'
+    NewRecord: 'Nuevo {type}'
     NoItemsFound: 'No hay ítems encontrados'
     PRINTEDAT: 'Impreso en'
     PRINTEDBY: 'Imprimir por'
@@ -270,7 +270,7 @@ es_MX:
     FULLADMINRIGHTS: 'Privilegios administrativos completos'
     FULLADMINRIGHTS_HELP: 'Implica y anula todos los demás permisos asignados.'
   PermissionCheckboxSetField:
-    FromRoleOnGroup: 'heredado del rol "%s" en el grupo "%s"'
+    FromRoleOnGroup: 'heredado del rol "{roletitle}" en el grupo "{grouptitle}"'
   Permissions:
     PERMISSIONS_CATEGORY: 'Roles y permisos de acceso'
   PhoneNumberField:
