--- a/lang/fi.yml
+++ b/lang/fi.yml
@@ -251,7 +251,7 @@ fi:
     VALIDATOR: Tarkistin
     VALIDCURRENCY: 'Ole hyvä ja valitse voimassa oleva valuutta'
   FormField:
-    Example: 'esim. %s'
+    Example: 'esim. {format}'
     NONE: 'Ei yhtään'
   GridAction:
     DELETE_DESCRIPTION: Poista
@@ -264,7 +264,7 @@ fi:
     Find: Etsi
     LEVELUP: 'Taso ylös'
     LinkExisting: 'Linkitä olemassaoleva'
-    NewRecord: 'Uusi %s'
+    NewRecord: 'Uusi {type}'
     NoItemsFound: 'Ei kohteita'
     PRINTEDAT: Tulostettu
     PRINTEDBY: Tulostaja
@@ -294,7 +294,7 @@ fi:
     DefaultGroupTitleContentAuthors: Sisällöntuottajat
     Description: Kuvaus
     GroupReminder: 'Valitessasi isäntäryhmän roolit periytyvät tähän ryhmään'
-    HierarchyPermsError: 'Isäntäryhmään ei voitu asettaa "%s" annettuja oikeuksia (vaaditaan JÄRJESTELMÄNVALVOJAN oikeudet)'
+    HierarchyPermsError: 'Isäntäryhmään ei voitu asettaa "{group}" annettuja oikeuksia (vaaditaan JÄRJESTELMÄNVALVOJAN oikeudet)'
     Locked: 'Lukittu?'
     NoRoles: 'Rooleja ei löytynyt'
     PLURALNAME: Ryhmät
@@ -542,7 +542,7 @@ fi:
     IMPORTSPECFIELDS: 'Tietokannan sarakkeet'
     IMPORTSPECLINK: 'Näytä erittely kohteelle %s'
     IMPORTSPECRELATIONS: Yhteydet
-    IMPORTSPECTITLE: 'Erittely kohteelle %s'
+    IMPORTSPECTITLE: 'Erittely kohteelle {model}'
   ModelAdmin_Tools_ss:
     FILTER: Suodin
     IMPORT: Tuo
@@ -562,9 +562,9 @@ fi:
     Page: Sivu
     View: Näytä
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Ole hyvä ja tee monimutkaisempi salasana lisäämällä joitakin seuraavista merkeistä: %s'
+    LOWCHARSTRENGTH: 'Ole hyvä ja tee monimutkaisempi salasana lisäämällä joitakin seuraavista merkeistä: {chars}'
     PREVPASSWORD: 'Olet jo käyttänyt tätä salasanaa aikaisemmin, ole hyvä ja valitse uusi'
-    TOOSHORT: 'Salasanan on oltava vähintään %s merkkiä'
+    TOOSHORT: 'Salasanan on oltava vähintään {minimum} merkkiä'
   Permission:
     AdminGroup: Järjestelmänvalvoja
     CMS_ACCESS_CATEGORY: CMS-pääsy
@@ -576,7 +576,7 @@ fi:
     AssignedTo: 'valittiin "{title}"'
     FromGroup: 'periytyivät ryhmästä "{title}"'
     FromRole: 'periytyivät roolista "{title}"'
-    FromRoleOnGroup: 'periytynyt roolista "%s" ryhmässä "%s"'
+    FromRoleOnGroup: 'periytynyt roolista "{roletitle}" ryhmässä "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Vain järjestelmänvalvojalla on oikeudet asettaa'
     PLURALNAME: Roolit
@@ -584,7 +584,7 @@ fi:
     Title: 'Roolin nimi'
   PermissionRoleCode:
     PLURALNAME: 'Käyttöoikeuden roolin koodit'
-    PermsError: 'Ei voida asettaa koodia "%s" annetuilla oikeuksilla (vaaditaan JÄRJESTELMÄNVALVOJAN oikeudet)'
+    PermsError: 'Ei voida asettaa koodia "{code}" annetuilla oikeuksilla (vaaditaan JÄRJESTELMÄNVALVOJAN oikeudet)'
     SINGULARNAME: 'Käyttöoikeuden roolin koodi'
   Permissions:
     PERMISSIONS_CATEGORY: 'Roolit ja käyttöoikeudet'
@@ -740,12 +740,12 @@ fi:
     has_many_Versions: Versiot
   VersionedGridFieldItemRequest:
     ARCHIVE: Arkistoi
-    Archived: 'Arkistoitiin %s %s'
+    Archived: 'Arkistoitiin {type} {title}'
     BUTTONARCHIVEDESC: 'Poista näkyviltä ja lähetä arkistoon'
     BUTTONPUBLISH: Julkaise
     BUTTONUNPUBLISH: 'Poista näkyvistä'
     BUTTONUNPUBLISHDESC: 'Poista tämä tietue julkaistulta sivustolta'
     Published: 'Julkaistiin {name} {link}'
-    Unpublished: 'Poistettiin näkyvistä %s %s'
+    Unpublished: 'Poistettiin näkyvistä {type} {title}'
   i18n:
     PLURAL: '{number} {form}'
