--- a/lang/nl.yml
+++ b/lang/nl.yml
@@ -209,7 +209,7 @@ nl:
     VALIDATOR: Validator
     VALIDCURRENCY: 'Vul een geldige munteenheid in'
   FormField:
-    Example: 'bv. %s'
+    Example: 'bv. {format}'
     NONE: geen
   GridAction:
     DELETE_DESCRIPTION: Verwijderen
@@ -222,7 +222,7 @@ nl:
     Find: Zoeken
     LEVELUP: 'Niveau omhoog'
     LinkExisting: 'Koppel een bestaand item'
-    NewRecord: 'Nieuw %s'
+    NewRecord: 'Nieuw {type}'
     NoItemsFound: 'Geen items gevonden.'
     PRINTEDAT: 'Geprint op'
     PRINTEDBY: 'Geprint door'
@@ -252,7 +252,7 @@ nl:
     DefaultGroupTitleContentAuthors: 'Inhoud Auteurs'
     Description: 'Omschrijving '
     GroupReminder: 'Als je de bovenliggende groep selecteert, neemt deze groep alle rollen over'
-    HierarchyPermsError: 'U moet (ADMIN) rechten hebben om de bovenliggende groep "%s" toe te kennen'
+    HierarchyPermsError: 'U moet (ADMIN) rechten hebben om de bovenliggende groep "{group}" toe te kennen'
     Locked: 'Gesloten?'
     NoRoles: 'Geen rollen gevonden'
     PLURALNAME: Groepen
@@ -441,7 +441,7 @@ nl:
     IMPORTSPECFIELDS: 'Database kolommen'
     IMPORTSPECLINK: 'Toon specificaties van %s'
     IMPORTSPECRELATIONS: Relaties
-    IMPORTSPECTITLE: 'Specificatie van %s'
+    IMPORTSPECTITLE: 'Specificatie van {model}'
   ModelAdmin_Tools_ss:
     FILTER: Filter
     IMPORT: Importeren
@@ -459,9 +459,9 @@ nl:
     Page: Pagina
     View: Bekijk
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Maak a.u.b. uw wachtwoord sterker door enkele van de volgende karakters te gebruiken: %s'
+    LOWCHARSTRENGTH: 'Maak a.u.b. uw wachtwoord sterker door enkele van de volgende karakters te gebruiken: {chars}'
     PREVPASSWORD: 'U heeft dit wachtwoord in het verleden al gebruikt, kies a.u.b. een nieuw wachtwoord.'
-    TOOSHORT: 'Het wachtwoord is te kort, het moet minimaal %s karakters hebben'
+    TOOSHORT: 'Het wachtwoord is te kort, het moet minimaal {minimum} karakters hebben'
   Permission:
     AdminGroup: Beheerder
     CMS_ACCESS_CATEGORY: 'CMS Toegang'
@@ -473,7 +473,7 @@ nl:
     AssignedTo: 'toegewezen aan "{title}"'
     FromGroup: 'geërfd van de groep "{title}"'
     FromRole: 'geërfd van de rol "{title}"'
-    FromRoleOnGroup: 'geërfd van rol "%s" in groep "%s"'
+    FromRoleOnGroup: 'geërfd van rol "{roletitle}" in groep "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Alleen admin kan doorvoeren'
     PLURALNAME: Rollen
@@ -481,7 +481,7 @@ nl:
     Title: Titel
   PermissionRoleCode:
     PLURALNAME: 'Permissie codes'
-    PermsError: 'U moet (ADMIN) rechten hebben om de code "%s" toe te kennen'
+    PermsError: 'U moet (ADMIN) rechten hebben om de code "{code}" toe te kennen'
     SINGULARNAME: 'Machtigingen rol code'
   Permissions:
     PERMISSIONS_CATEGORY: 'Rollen en toegangsrechten'
