--- a/lang/sl_SI.yml
+++ b/lang/sl_SI.yml
@@ -170,7 +170,7 @@ sl_SI:
     FilterBy: 'Filtriraj po'
     Find: Najdi
     LEVELUP: 'Nivo višje'
-    NewRecord: 'Nov %s'
+    NewRecord: 'Nov {type}'
     ResetFilter: Resetiraj
   GridFieldDetailForm:
     CancelBtn: Prekliči
@@ -332,7 +332,7 @@ sl_SI:
     has_many_Versions: Verzije
   VersionedGridFieldItemRequest:
     ARCHIVE: Arhiv
-    Archived: 'Arhivirano %s %s'
+    Archived: 'Arhivirano {type} {title}'
     BUTTONARCHIVEDESC: 'Odstrani iz objave in pošlji v arhiv'
     BUTTONPUBLISH: Objavi
     BUTTONUNPUBLISH: 'Odstrani iz objave'
